--- a/index.html
+++ b/index.html
@@ -466,6 +466,6 @@
 		<script src="assets/js/form-validation.js"></script>
 		<script src="assets/js/map.js"></script>
 		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFpGB6jezXVKBDSLkgR4iHKTZ9rcMUIHU&callback=initMap"></script>
-		<script src="js/popup-reglement.js"></script>
+		<script src="assets/js/popup-reglement.js"></script>
 	</body>
 </html>
