--- a/index.html
+++ b/index.html
@@ -260,26 +260,21 @@
 					</div>
 				</section>
 				
-				<div id="popup-reglement" class="equipment-popup">
-					<div class="popup-content">
-						    <span class="close-popup">&times;</span>
-						    <h3>Règlement intérieur</h3>
-						    <ul>
-						      <li><strong>Arrivée :</strong> entre 15:00 et 20:00</li>
-						      <li><strong>Départ :</strong> avant 10:00</li>
-						      <li><strong>6 voyageurs maximum</strong></li>
-						      <li>Pas d’animaux</li>
-						      <li>Calme requis entre 23:00 et 07:00</li>
-						      <li>Pas de fête ni de soirée</li>
-						      <li>Photographie commerciale autorisée</li>
-						      <li>Logement fumeur</li>
-						    </ul>
-						    <p><strong>Règles supplémentaires :</strong><br />
-						      Il est possible de fumer dans la villa mais ni dans les chambres, ni dans les salles de bains.<br />
-						      Possibilité de recevoir des amis, mais pas pour dormir (maximum de couchages : 6).
-						    </p>
-					</div>
-				</div>
+<div class="popup-content">
+  <span class="close-popup">&times;</span>
+  <h3><i class="fas fa-clipboard-list"></i> Règlement intérieur</h3>
+
+  <ul>
+    <li><i class="fas fa-sign-in-alt"></i> Arrivée entre 15:00 et 20:00</li>
+    <li><i class="fas fa-sign-out-alt"></i> Départ avant 10:00</li>
+    <li><i class="fas fa-user-friends"></i> 6 voyageurs maximum (y compris les invités de passage)</li>
+    <li><i class="fas fa-ban"></i> Pas d’animaux</li>
+    <li><i class="fas fa-moon"></i> Calme requis entre 23:00 et 07:00</li>
+    <li><i class="fas fa-glass-cheers"></i> Pas de fête ni de soirée</li>
+    <li><i class="fas fa-camera"></i> Photographie commerciale autorisée</li>
+    <li><i class="fas fa-smoking"></i> Fumer autorisé uniquement dans les espaces extérieurs (pas dans les chambres ni les salles de bains)</li>
+  </ul>
+</div>
 
 				<!-- CONTACT //////////////////////////////////////////////////////////////////////////////// -->
 				<section class="panel color4-alt">
