--- a/index-test.html
+++ b/index-test.html
@@ -240,7 +240,7 @@
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/main.js"></script>
 		<script src="assets/js/equipements.js"></script>
-		<script src="assets/js/planning.js"></script>
+		<script src="assets/js/planning2.js"></script>
 		<script src="assets/js/map.js"></script>
 		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFpGB6jezXVKBDSLkgR4iHKTZ9rcMUIHU&callback=initMap"></script>
 	</body>
