--- a/index-test.html
+++ b/index-test.html
@@ -45,7 +45,7 @@
 					</div>
 				</section>
 
-<!-- SECTION RÉSERVATION DYNAMIQUE //////////////////////////////////////////////////////// -->
+<!-- SECTION RÉSERVATION DYNAMIQUE (desktop/tablette) -->
 <section id="reservation-panel" class="panel medium color3-alt" style="display: none;">
   <div class="intro">
     <h2 class="major">🛏️ Réservez votre séjour</h2>
@@ -68,12 +68,18 @@
   </div>
 </section>
 
+<!-- BANNIÈRE MOBILE COLLAPSIBLE -->
 <div id="mobile-banner" style="display: none;">
-  <div>
+  <div id="mobile-banner-header" style="display: flex; justify-content: space-between; align-items: center;">
+    <span><strong>Dates sélectionnées</strong></span>
+    <button id="toggle-banner" style="background: none; border: none; color: white; font-size: 1.2em;">▲</button>
+  </div>
+  <div id="mobile-banner-details" style="display: none; margin-top: 0.5rem;">
     Séjour du <span id="mobile-start"></span> au <span id="mobile-end"></span><br />
     <strong id="mobile-nights"></strong> nuits sélectionnées
+    <br />
+    <a href="#contact" class="button primary small icon solid fa-check" style="margin-top: 0.5rem;">Réserver</a>
   </div>
-  <a href="#contact" class="button primary small icon solid fa-check" style="margin-top: 0.5rem;">Réserver</a>
 </div>
 				
 				<!-- CONTACT -->
