--- a/public/finaliser-reservation.html
+++ b/public/finaliser-reservation.html
@@ -593,7 +593,7 @@
             </ul>
           </div>
           <div class="image filtered span-1-75" data-position="25% 25%">
-            <img src="images/pic01.jpg" alt="" />
+            <img src="images/gallery/fulls/Jardin/13.jpg" alt="" />
           </div>
         </section>
 
@@ -697,8 +697,8 @@
               </div>
             </form>
           </div>
-          <div class="image filtered tinted" data-position="center">
-            <img src="images/pic02.jpg" alt="" />
+          <div class="image" data-position="center">
+            <img src="images/gallery/fulls/Exterieur/04.jpg" alt="" />
           </div>
         </section>
 
@@ -731,7 +731,7 @@
         </section>
 
         <!-- D É T A I L S //////////////////////////////////////////////////////////////////////////////// -->
-        <section class="panel medium color1">
+        <section class="panel spotlight medium right color1">
           <div class="intro joined span-3-5">
             <h2 class="major">📅 Détails de la réservation</h2>
             <p>
@@ -749,6 +749,9 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="image filtered tinted" data-position="center">
+            <img src="images/gallery/fulls/Piscine/04.jpg" alt="Piscine - Calypso Bay" />
           </div>
         </section>
 
